--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,40 @@
     display: inline-block;
 }
 
+.logo{
+    font-family: 'Oswald', sans-serif;
+    font-size: 30px;
+    width: 100%;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 70px;
+}
+.logo h1, .logo h2{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .pane-sm{
     width: 260px;
     max-width: 260px;
+}
+
+.center-project-buttons{
+    margin: auto;
+    width: 200px;
+    text-align: center;
+}
+
+.new-project-btn{
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.blank-pane{
+    background-color: #f5f5f4;
+    width: 100%;
+    height: 100%;
 }
 
 header{
