--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,16 @@ ul{
     list-style: none;
 }
 
-.edit-icon{
+form{
+    padding:10px;
+}
 
+.input{
+	display: block;
+	width:100%;
+	padding:2px 5px;
+	border-radius:3px;
+	border:#CCC 1px solid;
 }
 .add-settings-btn{
     float: right;
